# python-project-52

./: .env  .env_example  .gitignore  Makefile  README.md  build.sh  coverage.xml  pyproject.toml
.github/workflows/: task-manager.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
templates/: base.html  form_create_update.html  form_delete.html  index.html  login.html
templates/labels/: label_create.html  label_delete.html  label_update.html  labels_list.html
templates/statuses/: status_create.html  status_delete.html  status_list.html  status_update.html
templates/tasks/: filter.html  task_create.html  task_delete.html  task_detail.html  task_list.html  task_update.html  tasks_list.html
templates/users/: create_user.html  delete_user.html  update_user.html  users_list.html
tests/fixtures/: db_labels.json  db_statuses.json  db_task.json  db_user.json
tests/labels_tests/: test_create.py  test_delete.py  test_update.py
tests/statuses_tests/: test_create.py  test_delete.py  test_update.py
tests/tasks_test/: test_create.py  test_delete.py  test_list.py  test_update.py
tests/user_tests/: test_create.py  test_update.py
(+17 files in other folders)
