[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task management system"
authors = ["Garkusha Valery <aston585v@gmail.com>"]
license = "free"
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
