[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task management system"
authors = ["Garkusha Valery <aston585v@gmail.com>"]
license = "free"
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
django-bootstrap5 = "^24.2"
django-filter = "^24.2"
rollbar = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
